--- a/public/sks.html
+++ b/public/sks.html
@@ -22,26 +22,41 @@
         var myChart3 = echarts.init(document.getElementById('main3'));
         var myChart4 = echarts.init(document.getElementById('main4'));
 
+        const data = genData(50);
         // 차트 속성과 데이터를 지정합니다.
         var option1 = {
             title: {
                 text: '첫번째 pie 테스트',
                 subtext: '보조 타이틀',
-                left: 'right'
+                left: 'right',
+                textStyle: {
+                    // color: '#999',
+                    // fontWeight: 'normal',
+                    fontSize: 24
+                }
             },
             tooltip: {
                 trigger: 'item'
             },
             legend: {
                 orient: 'vertical', //horizontal
-                left: 'left'
+                left: 'left',
+                data: data.legendData
             },
             series: [
                 {
                 name: 'series name',
                 type: 'pie',
-                label: {position: 'inside',fontSize: 8},
+
+                label: {
+                    position: 'outer',
+                    fontSize: 8,
+                    formatter: '{a} <br/>{b} : {c} ({d}%)'
+                },
                 radius: '70%',
+                // top: top + '%',
+                height: '100%',
+                width: 'auto',
                 data: [
                     { value: 350, name: '50이하' },
                     { value: 735, name: '60' },
@@ -49,6 +64,23 @@
                     { value: 484, name: '80' },
                     { value: 300, name: '90이상' }
                 ],
+                // data: data.seriesData,
+                labelLine: {
+                    length: 15,
+                    length2: 0,
+                    maxSurfaceAngle: 80
+                },
+                labelLayout: function (params) {
+                    const isLeft = params.labelRect.x < myChart.getWidth() / 2;
+                    const points = params.labelLinePoints;
+                    // Update the end point.
+                    points[2][0] = isLeft
+                    ? params.labelRect.x
+                    : params.labelRect.x + params.labelRect.width;
+                    return {
+                    labelLinePoints: points
+                    };
+                },
                 emphasis: {
                     itemStyle: {
                     shadowBlur: 1,
@@ -570,6 +602,39 @@
                             }
                         ]
                         };
+
+                        
+                        function genData(count) {
+  // prettier-ignore
+  const nameList = [
+'가', '나', '다', '마', '바', '사', '아', '자', '차', '카', '타', '파', '하'
+    ];
+  const legendData = [];
+  const seriesData = [];
+  for (var i = 0; i < count; i++) {
+    var name =
+      Math.random() > 0.65
+        ? makeWord(4, 1) + '·' + makeWord(3, 0)
+        : makeWord(2, 1);
+    legendData.push(name);
+    seriesData.push({
+      name: name,
+      value: Math.round(Math.random() * 100000)
+    });
+  }
+  return {
+    legendData: legendData,
+    seriesData: seriesData
+  };
+  function makeWord(max, min) {
+    const nameLen = Math.ceil(Math.random() * max + min);
+    const name = [];
+    for (var i = 0; i < nameLen; i++) {
+      name.push(nameList[Math.round(Math.random() * nameList.length - 1)]);
+    }
+    return name.join('');
+  }
+}
 
         // 위에서 설정한 속성을 차트에 반영합니다.
         myChart.setOption(option1);
